

=== UPGRADING=====
We suggest to check out and hold close to the instructions, which can be found in our online manual:
https://manual.limesurvey.org/Upgrading_from_a_previous_version

Thank you to everyone who helped with this new release!


CHANGE LOG
------------------------------------------------------

Changes from 2.67.0 (build 170622) to 2.67.1 (build 170626) June 26, 2017
-Fixed issue #12414: exporting printable - template assets not visible in some extractors (eg windows default) (#701) (Tõnis Ormisson)
-Fixed issue: Error in database update syntax (Olle Harstedt)
#Updated translation: Catalan by qualitatuvic
#Updated translation: French (France) by arnaud21
#Updated translation: Hungarian by kkd
#Updated translation: Polish by elissa
#Updated translation: Polish (Informal) by elissa
#Updated translation: Turkish by kayazeren

Changes from 2.66.0 (build 170619) to 2.67.0 (build 170622) June 22, 2017
-New feature: Opting out of a survey requires a one-click confirmation (Carsten Schmitz)
-Fixed issue #12476: Quicktranslation tabs not working (markusfluer)
-Fixed issue: convertDateTimeFormat gets wrong fromdateformat in survey list (Olle Haerstedt)
#Updated translation: Catalan by qualitatuvic
#Updated translation: Chinese (Simplified) by yanglaw
#Updated translation: French (France) by arnaud21
#Updated translation: Hungarian by kkd
#Updated translation: Japanese by nomoto
#Updated translation: Polish by elissa
#Updated translation: Polish (Informal) by elissa
#Updated translation: Portuguese (Brazil) by mauriciofurtado
#Updated translation: Portuguese (Portugal) by samarta
#Updated translation: Turkish by kayazeren


Changes from 2.65.6 (build 170615) to 2.66.0 (build 170619) June 19, 2017
-New feature #12468: EM placeholder {SID} in email templates (Denis Chenu)
-Fixed issue #12101: Placeholder "TOKEN" does not work in Equation question (Denis Chenu)
-Fixed issue #12166: No possibility to share users with some webserver configurations (Carsten Schmitz)