@@ -1220,20 +1220,17 @@ class database extends Survey_Common_Action
                 $oSurvey->usecaptcha = Survey::transcribeCaptchaOptions();
                 $oSurvey->emailresponseto = App()->request->getPost('emailresponseto');
                 $oSurvey->emailnotificationto = App()->request->getPost('emailnotificationto');
-                $oSurvey->googleanalyticsapikeysetting = App()->request->getPost('googleanalyticsapikeysetting');
-                if( $oSurvey->googleanalyticsapikeysetting == "Y")
-                {
-                    $oSurvey->googleanalyticsapikey = App()->request->getPost('googleanalyticsapikey');
+                switch(App()->request->getPost('googleanalyticsapikeysetting')) {
+                    case "Y":
+                        $oSurvey->googleanalyticsapikey = App()->request->getPost('googleanalyticsapikey');
+                        break;
+                    case "G":
+                        $oSurvey->googleanalyticsapikey = "9999useGlobal9999";
+                        break;
+                    case "N":
+                    default:
+                        $oSurvey->googleanalyticsapikey = "";
                 }
-                else if( $oSurvey->googleanalyticsapikeysetting == "G")
-                {
-                    $oSurvey->googleanalyticsapikey = "9999useGlobal9999";
-                }
-                else if( $oSurvey->googleanalyticsapikeysetting == "N")
-                {
-                    $oSurvey->googleanalyticsapikey = "";
-                }
-
                 $oSurvey->googleanalyticsstyle = App()->request->getPost('googleanalyticsstyle');
                 $oSurvey->tokenlength = (App()->request->getPost('tokenlength')<5  || App()->request->getPost('tokenlength')>36)?15:App()->request->getPost('tokenlength');
                 $oSurvey->adminemail = App()->request->getPost('adminemail');
@@ -1242,7 +1239,6 @@ class database extends Survey_Common_Action
                 $event = new PluginEvent('beforeSurveySettingsSave');
                 $event->set('modifiedSurvey', $oSurvey);
                 App()->getPluginManager()->dispatchEvent($event);
-
                 if ($oSurvey->save())
                 {
                     Yii::app()->setFlashMessage(gT("Survey settings were successfully saved."));
